added logic for multiply two bigdecimal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+### Database config ###
+spring.datasource.url=jdbc:postgresql://localhost:5432/math_db
+spring.datasource.username=tenpo
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-### Config Jackson ###
+### Jackson config ###
 
 spring.jackson.serialization.wrap-root-value=true
 spring.jackson.deserialization.unwrap-root-value=true
