[auth] first development

--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,18 @@
 	<name>tenpo</name>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 		<spring-boot-starter.version>2.3.0.RELEASE</spring-boot-starter.version>
 		<spring-security.version>5.3.2.RELEASE</spring-security.version>
-		<jsonwebtoken.version>0.9.1</jsonwebtoken.version>
+		<jwt.version>0.9.1</jwt.version>
 		<org.postgresql.version>42.2.12</org.postgresql.version>
 		<junit.version>4.13</junit.version>
-		<h2.version>1.4.200</h2.version>
-		<apache-commons.version>3.10</apache-commons.version>
 		<maven-surefire.version>2.21.0</maven-surefire.version>
 	</properties>
 
 	<dependencies>
+
+		<!-- spring dependecies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -36,6 +36,18 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring-boot-starter.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>${spring-boot-starter.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jwt.version}</version>
+		</dependency>
+
+		<!--database dependencies -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -49,7 +61,7 @@
 		</dependency>
 
 
-		<!-- Dependencies for test -->
+		<!-- test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
