--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/math_db
 spring.datasource.username=tenpo
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+### JPA Config ###
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-### Jackson config ###
-
-spring.jackson.serialization.wrap-root-value=true
-spring.jackson.deserialization.unwrap-root-value=true
-spring.jackson.property-naming-strategy=SNAKE_CASE
+### tenpo properties ###
+tenpo.app.jwt.secret=tenpo_math_challenge
+tenpo.app.jwt.expiration.ms=86400000
