[swagger] swagger development

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
 			<version>${jwt.version}</version>
 		</dependency>
 
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
 		<!--database dependencies -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
