--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=test
 spring.datasource.password=test
+
+
+### tenpo properties ###
+tenpo.app.jwt.secret=tenpo_math_challenge
+tenpo.app.jwt.expiration.ms=86400000
