added filter to TransactionHistoryService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ spring.datasource.username=tenpo
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 ### JPA Config ###
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true 
+### LOGGER Config ####
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
 ### tenpo properties ###
 tenpo.app.jwt.secret=tenpo_math_challenge
