changed database url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### Database config ###
-spring.datasource.url=jdbc:postgresql://localhost:5432/math_db
+spring.datasource.url=jdbc:postgresql://dbpostgresql:5432/math_db
 spring.datasource.username=tenpo
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
