--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 ### JPA Config ###
 spring.jpa.properties.hibernate.show=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 ### LOGGER Config ####
