--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,5 @@ services:
       - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=password
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=tenpo
       - POSTGRES_DB=math_db
