--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<org.postgresql.version>42.2.12</org.postgresql.version>
 		<junit.version>4.13</junit.version>
 		<maven-surefire.version>2.21.0</maven-surefire.version>
+		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
+		<springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
 	</properties>
 
 	<dependencies>
@@ -56,13 +58,12 @@
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
-			<version>2.4.0</version>
+			<version>${springfox-swagger2.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.4.0</version>
+			<version>${springfox-swagger-ui.version}</version>
 		</dependency>
 
 		<!--database dependencies -->
